Update gitignore and Cyber Hacker album data
- Added instruction files to gitignore (add-album.md, future-project.md)
- Updated Cyber Hacker albumData.js

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 *.txt 
 .claude/settings.local.json
 KIYORAKA-KEN-MUSIC-ALBUM-ANALYSIS.md
+instruction add album.md
+.gitignore
+add-album.md
+future-project.md
